--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,17 @@
     <!-- Izin akses internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- Izin kamera dan penyimpanan -->
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
 
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
 
     <application
         android:networkSecurityConfig="@xml/network_security_config"
-
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -23,6 +25,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Edufarm"
         tools:targetApi="31">
+
+        <!-- Deklarasi FileProvider -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
+        <!-- Deklarasi MainActivity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
